# rustnation23-workshop

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  style.css
checkpoints/1/: Cargo.toml  style.css
checkpoints/1/src/: main.rs
checkpoints/1/src-tauri/: Cargo.toml  tauri.conf.json
checkpoints/1/src/components/: channel.rs  channel_list.rs  channel_preview.rs  item.rs  item_preview.rs
checkpoints/2/: Cargo.toml  index.html
checkpoints/2/src/: main.rs
checkpoints/2/src-tauri/: Cargo.toml
checkpoints/2/src/components/: channel.rs  item_preview.rs
checkpoints/3/: Cargo.toml
checkpoints/3/src-tauri/: Cargo.toml
checkpoints/3/src-tauri/src/: main.rs
checkpoints/3/src/components/: channel.rs  channel_preview.rs
checkpoints/4/: Cargo.toml
checkpoints/4/src/: main.rs
checkpoints/4/src-tauri/: Cargo.toml  tauri.conf.json
checkpoints/4/src/components/: channel.rs  channel_list.rs  item.rs  item_preview.rs  mod.rs
checkpoints/complete/: Cargo.toml  index.html  style.css
checkpoints/complete/src/: main.rs
checkpoints/complete/src-tauri/: Cargo.toml  tauri.conf.json
checkpoints/complete/src-tauri/src/: error.rs  main.rs
checkpoints/complete/src/components/: add_channel.rs  channel.rs  channel_list.rs  channel_preview.rs  item.rs  item_preview.rs  mod.rs  titlebar.rs
crates/desktop/: Cargo.toml  tauri.conf.json
crates/ui/: Cargo.toml  Trunk.toml  index.html
crates/ui/src/: lib.rs  main.rs
src/: add_channel.rs  app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cache.rs  main.rs
src/components/: channel.rs  channel_preview.rs  channels.rs  date.rs  item.rs  item_preview.rs  mod.rs
