[package]
name = "ui"
version = "0.0.0"
edition = "2021"

[workspace]
members = ["src-tauri"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59"
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = { version = "0.3.59", features = ["Document", "Element"]}
yew = { version="0.20.0", features = ["csr"] }
url = { version = "2.3.1", features = ["serde"] }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["tauri", "window"] }
rss = { version = "2.0.2", features = ["with-serde"] }
log = "0.4.17"
wasm-logger = "0.2.0"
ammonia = "3"
yew-router = "0.17"
console_error_panic_hook = "0.1.7"