[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["http-request", "shell-open", "window-create", "window-maximize", "window-start-dragging", "window-unmaximize"] }
rss = { version = "2.0.2", features = ["atom", "with-serde", "validation"] }
url = "2.3.1"
thiserror = "1.0.38"
reqwest = "0.11.14"
cached = "0.42.0"
log = "0.4.17"
tauri-plugin-store = { path = "/Users/jonaskruckenberg/Documents/GitHub/plugins-workspace/plugins/store" }
# tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "rust-accessible-store" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
