[package]
name = "rss-reader-ui4"
version = "0.0.0"
edition = "2021"

[dependencies]
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59"
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"
yew = { version="0.20.0", features = ["csr"] }
yew-router = "0.17.0"
rss = { version = "2.0.2", features = ["with-serde"] }
url = { version = "2.3.1", features = ["serde"] }
ammonia = "3.3.0"
