[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "entry_client"
required-features = ["hydration"]

[[bin]]
name = "prerender"
required-features = ["ssr"]

[dependencies]
log = "0.4.17"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys" }
wasm-logger = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.15.0", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util"] }
env_logger = "0.10.0"
futures-util = { version = "0.3.25", features = ["sink"]}
clap = { version = "4.1.4", features = ["derive"] }

[features]
hydration = ["yew/hydration"]
ssr = ["yew/ssr"]
