[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys" }
wasm-logger = "0.2.0"

[features]
hydration = ["yew/hydration"]
ssr = ["yew/ssr"]
